<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/frame_green"
        android:gravity="center"
        android:text="@string/text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:numStars="5"
        android:stepSize="1" />


    <EditText
        android:id="@+id/etComment"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:gravity="top"
        android:hint="@string/comment_candidate"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/frame_gray"
        android:textColorHint="@color/bt_grey_focus"
        android:textCursorDrawable="@null" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:footerDividersEnabled="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/frame_yellow"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/btOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/frame_yellow"
            android:text="@string/sent"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
