<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:facebook="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/card_frame"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/llRating">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/rating_candidate"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/frame_red"
                android:textStyle="bold" />

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/ivPhotoFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                facebook:preset_size="normal"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                android:visibility="visible" />

            <RatingBar
                android:id="@+id/rbRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:stepSize="1"
                android:visibility="visible" />
        </LinearLayout>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llMyRating">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/my_rating"
                android:id="@+id/textView6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/frame_red"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/ivPhotoFacebook2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                facebook:preset_size="normal"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginRight="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/tvNameUser2"
                android:text="@string/text"
                android:layout_toEndOf="@+id/ivPhotoFacebook2"
                android:textColor="@color/black_undo"
                android:layout_alignTop="@+id/ivPhotoFacebook2"
                android:layout_toRightOf="@+id/ivPhotoFacebook2"
                android:layout_toStartOf="@+id/tvEdit"
                android:layout_toLeftOf="@+id/tvEdit" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbRating2"
                android:layout_toEndOf="@+id/ivPhotoFacebook2"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_below="@+id/tvNameUser2"
                android:layout_toRightOf="@+id/ivPhotoFacebook2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text"
                android:id="@+id/tvComment"
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/ivPhotoFacebook2"
                android:layout_below="@+id/rbRating2"
                android:layout_toRightOf="@+id/ivPhotoFacebook2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/text"
                android:id="@+id/tvDate"
                android:textColor="@color/black_undo"
                android:layout_toEndOf="@+id/rbRating2"
                android:layout_below="@+id/tvNameUser2"
                android:layout_toRightOf="@+id/rbRating2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/edit"
                android:id="@+id/tvEdit"
                android:textColor="@color/frame_green"
                android:textStyle="bold"
                android:layout_alignTop="@+id/tvNameUser2"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pbSocial"
            android:visibility="visible"
            android:layout_gravity="center_horizontal|top"/>

        <com.facebook.widget.LoginButton
            android:id="@+id/btSocialFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@drawable/card_frame_top"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/average_candidate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/frame_green"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/text"
            android:textColor="@color/black"
            android:textSize="40sp" />


        <RatingBar
            android:id="@+id/rbRating3"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:rating="4.5" />

        <TextView
            android:id="@+id/tvQtdUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text"
            android:textColor="@color/font_sub_title"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>